# vision

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
client/: .isort.cfg  README.md  main.py  pyproject.toml
client/.devcontainer/: devcontainer.json  docker-compose.yml
server/: .flake8  README.md  main.py  pyproject.toml
server/.devcontainer/: devcontainer.json  docker-compose.yml
